@@ -32,6 +32,7 @@ lib/boxgrinder-build/plugins/os/rpm-based/rpm-dependency-validator.rb
 lib/boxgrinder-build/plugins/os/rpm-based/src/appliance.ks.erb
 lib/boxgrinder-build/plugins/os/rpm-based/src/base.repo
 lib/boxgrinder-build/plugins/os/rpm-based/src/motd.init
+lib/boxgrinder-build/plugins/os/sl/sl-plugin.rb
 lib/boxgrinder-build/plugins/platform/ec2/ec2-plugin.rb
 lib/boxgrinder-build/plugins/platform/ec2/src/fstab_32bit
 lib/boxgrinder-build/plugins/platform/ec2/src/fstab_64bit
