@@ -27,6 +27,7 @@ module BoxGrinder
 
       register_supported_os('fedora', ['13', '14', '15'])
       register_supported_os('centos', ['5'])
+      register_supported_os('sl', ['5', '6'])
       register_supported_os('rhel', ['5', '6'])
     end
 
